# cpp_cu_cm

./: .gitignore  CMakeLists.txt  Readme.md
include/: common.h  lambda_exp.h  main.h  matrix.h  sp.h
src/: add_v.cu  cuda_common.cuh  deviceQuery.cu  lambda_exp.cpp  main.cpp  matrix.cpp  matrix.cu  sp.cpp
